# lovelace

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  project.toml
.cargo/: config.toml
.github/workflows/: coverage.yml  deploy.yml  test.yml
main/: Cargo.toml
main/src/: auth.rs  db.rs  email.rs  main.rs  models.rs  notifications.rs  utils.rs
main/src/auth/: login.rs  logout.rs  mod.rs  register.rs  reset.rs
main/src/calendar/: test_calendar.rs
main/src/class/: create.rs  delete.rs  invite.rs  join.rs  list.rs  members.rs  messages.rs  mod.rs  overview.rs
main/src/dashboard/: mod.rs
main/src/home/: mod.rs
main/src/institution/: configure.rs  delete.rs  register.rs  test_ctx.rs
main/src/models/: mod.rs
main/src/ui/: navbar.rs  page.rs
main/src/utils/: error.rs  error_messages.rs  form.rs  html_or_redirect.rs  mod.rs  permission_error.rs
utils/html/src/: lib.rs
utils/malvolio/: Cargo.toml
utils/malvolio/src/: lib.rs  macros.rs  text.rs  utils.rs
utils/malvolio/src/attributes/: common.rs
utils/malvolio/src/tags/: a.rs  br.rs  div.rs  headings.rs  html.rs  img.rs  input.rs  label.rs  meta.rs  noscript.rs  option.rs  p.rs  select.rs  style.rs  title.rs
utils/malvolio/src/tags/body/: body_node.rs  mod.rs
utils/malvolio/src/tags/form/: mod.rs
utils/malvolio/src/tags/head/: mod.rs
utils/malvolio/tests/: test_yew_rendering.rs
utils/malvolio_codegen/: Cargo.toml
utils/mercutio/: Cargo.toml
utils/mercutio/src/: lib.rs
utils/mercutio_codegen/: Cargo.toml
utils/mercutio_codegen/src/: inner.rs
utils/mercutio_codegen/tests/: tests.rs
utils/portia/: Cargo.toml
utils/portia/src/: colour.rs  levels.rs  padding.rs  render.rs
utils/prospero/: Cargo.toml
utils/prospero/src/: calendar.rs  client.rs  event.rs
utils/prospero/tests/: test.rs
(+31 files in other folders)
