[package]
name = "mercutio_codegen"
version = "0.1.0"
authors = ["teymour-aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
darling = "0.13.0"
nanoid = "0.4.0"
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = "1.0.73"

[dev-dependencies]
trybuild = "1.0.42"
mercutio = { path = "../mercutio" }
malvolio = "0.3.0"

[features]
no_cache = []
