[package]
name = "prospero"
version = "0.1.0"
authors = ["teymour-aldridge <teymour.aldridge@icloud.com>"]
edition = "2018"

[dependencies]
atomic_refcell = "0.1.7"
chrono = "0.4.19"
derivative = "2.2.0"
digest_auth = "0.3.0"
format_xml = "0.2.0"
http = "0.2.4"
ical = "0.7.0"
icalendar = "0.10.0"
reqwest = "0.11.4"
roxmltree = "0.14.1"
thiserror = "1.0.25"
uuid = { version = "0.8.2", features = ["v4"] }

[features]
concurrent = []
caldav_test = []

[dev-dependencies]
tokio = { version = "1.8.0", features = ["macros", "rt"] }
